# snake

./: CMakeLists.txt  README.md  display_text.h  food.cpp  food.h  main.cpp  score.cpp  score.h  snake.cpp  snake.h
